# discursiva

./: .env.example  .gitignore  ASSESSMENT.md  README.md  architecture.mermaid  collection.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  preinstall.sh  pyproject.toml  serverless.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile.dev  compose.yml  conftest.py  pyproject.toml
apps/api/src/api/: dependencies.py  handler.py  main.py  utils.py
apps/api/src/api/handlers/: +status.py  create_submission.py  get_submission.py  list_submissions.py
apps/api/src/api/routers/: submissions.py
apps/api/src/api/schemas/: __init__.py  mappers.py  submission.py
apps/api/tests/: conftest.py  test_e2e.py  test_handlers_unit.py  test_submissions.py
apps/frontend/: compose.yml  next.config.js  package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/submissions/: page.tsx
apps/frontend/src/app/submissions/[id]/: page.tsx
apps/frontend/src/components/: Nav.tsx  ScoreRing.tsx  StatusBadge.tsx  SubmissionCard.tsx
apps/frontend/src/hooks/: useLocalStorage.ts
apps/frontend/src/lib/: api.ts
apps/worker/: compose.yml  pyproject.toml
apps/worker/src/worker/: handler.py  main.py
docker/: compose.database.yml  compose.localstack.yml  init-localstack.sh
