[project]
name = "discursiva-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discursiva-domain",
    "discursiva-infra",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
discursiva-domain = { workspace = true }
discursiva-infra  = { workspace = true }

